responsive strict fix and scrollbar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,8 +16,25 @@ a {
 	box-sizing: border-box;
 	overflow: hidden;
 	user-select: none;
+
 }
 
 *:focus {
 	outline: none;
+}
+
+::-webkit-scrollbar {
+	width: 5px;
+	height: 5px;
+
+}
+
+::-webkit-scrollbar-track {
+	background-color: rgba(255, 255, 255, 0.308);
+	border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+	background-color: #d4d4d4;
+	border-radius: 10px;
 }
